--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ server.port=8085
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.messages.basename=lang.messages
+spring.datasource.data=classpath:/data.sql,classpath:/authors.sql
+spring.datasource.schema=classpath:/schema.sql
