Finish JPA Hibernate module

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,17 @@
 server.port=8085
-spring.h2.console.enabled=true
+#spring.h2.console.enabled=true
 
 spring.messages.basename=lang.messages
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=User
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.data=classpath:/data.sql,classpath:/authors.sql
-spring.datasource.schema=classpath:/schema.sql
+
+# spring.datasource.data=classpath:/data.sql,classpath:/authors.sql
+# spring.datasource.schema=classpath:/schema.sql
+
 spring.datasource.initialization-mode=always
+
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
