Finish HW from module-5

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,6 @@ spring.datasource.initialization-mode=always
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
+
+spring.liquibase.enabled=true
+spring.liquibase.change-log=classpath:/db.changelog/changelog-master.xml
